--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.4.1",
     "jasmine-core": "^2.3.4",
+    "jquery": "^2.1.4",
     "karma": "^0.13.10",
     "karma-chrome-launcher": "^0.2.1",
     "karma-jasmine": "^0.3.6",
