--- a/package.json
+++ b/package.json
@@ -22,18 +22,18 @@
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-eslint": "^1.0.0",
+    "gulp-jasmine": "^2.1.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-remember": "^0.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.4.1",
     "jasmine-core": "^2.3.4",
+    "jasmine-reporters": "^2.0.7",
     "jquery": "^2.1.4",
-    "karma": "^0.13.10",
-    "karma-chrome-launcher": "^0.2.1",
-    "karma-jasmine": "^0.3.6",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
